Debugger inplementation